Add file with link

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Trey Rhodes</h1>
 <p>E-Portfolio</p>
-<a href="filename.html">Open file.</a>
+<a href="Serious Game.jar">Serious Game Download</a>
 </body>
 </html>
