Added Folder for Project Euler

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
 <h1>Trey Rhodes</h1>
 <p>E-Portfolio</p>
-<a href="Serious Game.jar">Serious Game Download</a>
+<p>Projects</p>
+<a href="Serious Game.jar">Serious Game For First Graders</a>
+<a href="/Project Euler Solutions">Project Euler Solutions</a>
 </body>
 </html>
