--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <p>E-Portfolio</p>
 <p>Projects</p>
 <a href="Serious Game.jar">Serious Game For First Graders<br></a>
+<a href="Game UML.docx">Serious Game UML Diagram<br></a>
 <a href="/Project Euler Solutions">Project Euler Solutions</a>
 </body>
 </html>
