--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <p>Projects</p>
 <a href="Serious Game.jar">Serious Game For First Graders<br></a>
 <a href="Game UML.docx">Serious Game UML Diagram<br></a>
-<a href="/Project Euler Solutions">Project Euler Solutions</a>
+<a href="/Project Euler Solutions">Project Euler Solutions<br></a>
+<a href="Swift.pptx">Swift Presentation<br></a>
 </body>
 </html>
