--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+ <font size="+3">
 <h1>Trey Rhodes</h1>
 <p>E-Portfolio</p>
 <p>Projects</p>
@@ -8,5 +9,7 @@
 <a href="Game UML.docx">Serious Game UML Diagram<br></a>
 <a href="/Project Euler Solutions">Project Euler Solutions<br></a>
 <a href="Swift.pptx">Swift Presentation<br></a>
+<a href="Rancher Problem.zip">Fibonacci Calculator<br></a>
+</font>
 </body>
 </html>
