--- a/Project Euler Solutions/index.html
+++ b/Project Euler Solutions/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
+<font size="+3">
 <h1>Trey Rhodes</h1>
 <p>Project Euler Solutions</p>
+<a href="Problem01.php">Problem 1<br></a>
+</font>
 </body>
 </html>
