Added Euler Projects

--- a/Project Euler Solutions/Problem01.html
+++ b/Project Euler Solutions/Problem01.html
@@ -1,3 +1,4 @@
+<link href="txtstyle.css" rel="stylesheet" type="text/css" />
 public class Problem01 {
 	public static void main(String args[]) {
 		int sum = 0;
