--- a/Project Euler Solutions/Problem01.html
+++ b/Project Euler Solutions/Problem01.html
@@ -1,19 +1,9 @@
-<link href="txtstyle.css" rel="stylesheet" type="text/css" />
-public class Problem01 {
-	public static void main(String args[]) {
-		int sum = 0;
-		for (int i = 1; i < 1000; i++) {
-			if (isMultiple(i))
-				sum += i;
-		}
-		System.out.println("Answer: " + sum);
-	}
-	private static boolean isMultiple(int num) {
-		if (num % 5 == 0 || num % 3 == 0) {
-			return true;
-		}
-		return false;
-	}
-}
-
-Answer: 233168
+<!DOCTYPE html>
+<html>
+<body>
+<font size="+3">
+<object width="300" height="300" type="text/plain" data="message.txt" border="0" >
+</object>
+</font>
+</body>
+</html>
