Edited text file

--- a/Project Euler Solutions/Problem01.html
+++ b/Project Euler Solutions/Problem01.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <font size="+3">
-<object width="300" height="300" type="text/plain" data="message.txt" border="0" >
+<object width="300" height="300" type="text/plain" data="Problem01.txt" border="0" >
 </object>
 </font>
 </body>
