--- a/Project Euler Solutions/Problem01.html
+++ b/Project Euler Solutions/Problem01.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Problem 1</title>
+
+ <script type="text/javascript">
+
+	var reader = new FileReader();
+
+	function readText(){
+			var reader = new FileReader();
+
+			reader.onload = function (e) {  
+				var output=e.target.result;
+				document.getElementById('main').innerHTML= output;
+            }
+			reader.readAsText("Problem01.txt");
+    } 
+
+</script>
+
+</head>
 <body>
-<font size="+3">
-<object width="300" height="300" type="text/plain" data="Problem01.txt" border="0" >
-</object>
-</font>
-</body>
+	<input type="button" id="decode" onclick="readText()" value="Decode">
+	<div id="main"></div>
+  </body>
 </html>
