Read file tester

--- a/Project Euler Solutions/Problem01.html
+++ b/Project Euler Solutions/Problem01.html
@@ -14,7 +14,7 @@
 				var output=e.target.result;
 				document.getElementById('main').innerHTML= output;
             }
-			reader.readAsText("Problem01.txt");
+			reader.readAsText('http://www.swpc.noaa.gov/ftpdir/indices/events/events.txt');
     } 
 
 </script>
