--- a/Project Euler Solutions/Problem01.html
+++ b/Project Euler Solutions/Problem01.html
@@ -24,7 +24,7 @@
 </script>
 </head>
 <body>
-	<input type="Problem01.txt" onchange='readText(this)' />
-	<div id="main"></div>
+	window.onload = readText("Problem01.txt");
+	<div id="Problem 1"></div>
   </body>
 </html>
