--- a/Project Euler Solutions/index.html
+++ b/Project Euler Solutions/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+<title>Project Euler Solutions</title>
 <font size="+3">
 <h1>Trey Rhodes</h1>
 <p>Project Euler Solutions</p>
