--- a/Project Euler Solutions/Problem01.html
+++ b/Project Euler Solutions/Problem01.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <body>
-<div><p><?php include('myFile.txt'); ?></p></div>
+<div><p><?php include('Problem01.txt'); ?></p></div>
 </body>
 </head>
 </html>
