Read file tester

--- a/Project Euler Solutions/index.html
+++ b/Project Euler Solutions/index.html
@@ -5,7 +5,7 @@
 <font size="+3">
 <h1>Trey Rhodes</h1>
 <p>Project Euler Solutions</p>
-<a href="Problem01.php">Problem 1<br></a>
+<a href="Problem01.html">Problem 1<br></a>
 </font>
 </body>
 </html>
