--- a/Project Euler Solutions/Problem01.html
+++ b/Project Euler Solutions/Problem01.html
@@ -1,22 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-<script language = "javascript">
-function load() {
-    var file = new XMLHttpRequest();
-    file.open("GET", "Problem01.txt", true);
-    file.onreadystatechange = function() {
-      if (file.readyState === 4) {  // Makes sure the document is ready to parse
-        if (file.status === 200) {  // Makes sure it's found the file
-          text = file.responseText;
-          document.getElementById("div1").innerHTML = text;
-        }
-      }
-    }
+<link href="txtstyle.css" rel="stylesheet" type="text/css" />
+public class Problem01 {
+	public static void main(String args[]) {
+		int sum = 0;
+		for (int i = 1; i < 1000; i++) {
+			if (isMultiple(i))
+				sum += i;
+		}
+		System.out.println("Answer: " + sum);
+	}
+	private static boolean isMultiple(int num) {
+		if (num % 5 == 0 || num % 3 == 0) {
+			return true;
+		}
+		return false;
+	}
 }
-window.onLoad = load();
-</script>
-<body>
-</body>
-</head>
-</html>
+
+Answer: 233168
