--- a/Project Euler Solutions/Problem01.html
+++ b/Project Euler Solutions/Problem01.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html>
+<body>
+<title>Project Euler Solutions</title>
+<font size="+3">
 <link href="txtstyle.css" rel="stylesheet" type="text/css" />
 public class Problem01 {
 	public static void main(String args[]) {
@@ -17,3 +22,6 @@ public class Problem01 {
 }
 
 Answer: 233168
+</font>
+</body>
+</html>
