--- a/Project Euler Solutions/index.html
+++ b/Project Euler Solutions/index.html
@@ -6,6 +6,7 @@
 <h1>Trey Rhodes</h1>
 <p>Project Euler Solutions</p>
 <a href="Problem01.html">Problem 1<br></a>
+<a href="Problem02.html">Problem 2<br></a>
 </font>
 </body>
 </html>
