--- a/Project Euler Solutions/index.html
+++ b/Project Euler Solutions/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
+<font size="+3
+<link rel="icon" href="hnrqa.png">
 <title>Project Euler Solutions</title>
-<font size="+3">
 <h1>Trey Rhodes</h1>
 <p>Project Euler Solutions</p>
 <a href="Problem01.html">Problem 1<br></a>
