attempt to fix formatting

--- a/Algorithms and Data Structures/Dijkstras.html
+++ b/Algorithms and Data Structures/Dijkstras.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="txtstyle.css" rel="stylesheet" type="text/css" />
 <body>
 <title>Algorithms and Data Structures</title>
 /*Trey Rhodes
