--- a/Algorithms and Data Structures/index.html
+++ b/Algorithms and Data Structures/index.html
@@ -3,10 +3,14 @@
 <body>
 <font size="+3
 <link rel="icon" href="hnrqa.png">
-<title>Algorithms and Data Structures</title>
+<title>Trey Rhodes//Algorithms and Data Structures</title>
 <h1>Trey Rhodes</h1>
-<p>Programs</p>
-<a href="Dijkstras.html">Dijkstras<br></a>
+<p>Algorithms and Data Structures</p>
+<a href="Dijkstras.html">Dijkstra's Algorithm (C)<br></a>
+<a href="Prims.html">Prim's Algorithm (C)<br></a>
+<a href="DMM.html">Dynamic Memory Management (C)<br></a>
+<a href="CounterSort.html">Counter Sort (C)<br></a>
+<a href="Dijkstras.html">Parallel Counter Sort (Java)<br></a>
 </font>
 </body>
 </html>
