--- a/Project Euler Solutions/index.html
+++ b/Project Euler Solutions/index.html
@@ -3,7 +3,7 @@
 <body>
 <font size="+3
 <link rel="icon" href="hnrqa.png">
-<title>Project Euler Solutions</title>
+<title>Trey Rhodes//Project Euler Solutions</title>
 <h1>Trey Rhodes</h1>
 <p>Project Euler Solutions</p>
 <a href="Problem01.html">Problem 1<br></a>
