--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <font size="+3">
 <link rel="icon" href="hnrqa.png">
-<title>Home</title>
+<title>Trey Rhodes//Home</title>
 <h1>Trey Rhodes</h1>
 <p>E-Portfolio</p>
 <p>Projects</p>
