Fixed incorrect link

--- a/Algorithms and Data Structures/index.html
+++ b/Algorithms and Data Structures/index.html
@@ -10,7 +10,7 @@
 <a href="Prims.html">Prim's Algorithm (C)<br></a>
 <a href="DMM.html">Dynamic Memory Management (C)<br></a>
 <a href="CounterSort.html">Counter Sort (C)<br></a>
-<a href="Dijkstras.html">Parallel Counter Sort (Java)<br></a>
+<a href="ParallelCounterSort.html">Parallel Counter Sort (Java)<br></a>
 </font>
 </body>
 </html>
