Modified style of webpage home

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <font size="+3">
 <link rel="icon" href="hnrqa.png">
+<link href="stylesheet.css" rel="stylesheet" type="text/css" />
 <title>Trey Rhodes//Home</title>
 <h1>Trey Rhodes</h1>
 <p>E-Portfolio</p>
