added resume to home

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <h1>Trey Rhodes</h1>
 <p>E-Portfolio</p>
 <p>Projects</p>
-<object data="Resume.pdf" type="application/pdf" width="100%" height="100%">
-  <p>Alternative text - include a link <a href="Resume.pdf">Resume</a></p>
-</object>
+<a href="/Resume">Resume<br></a>
 <a href="Serious Game.jar">Serious Game For First Graders<br></a>
 <a href="Game UML.docx">Serious Game UML Diagram<br></a>
 <a href="/Project Euler Solutions">Project Euler Solutions<br></a>
