Added complete formatting for explorer pages

--- a/Project Euler Solutions/index.html
+++ b/Project Euler Solutions/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <body>
-<font size="+3
+<font size="+3">
 <link rel="icon" href="hnrqa.png">
-<title>Trey Rhodes//Project Euler Solutions</title>
+<link href="explorerstyle.css" rel="stylesheet" type="text/css" />
+<title>Trey Rhodes//Project Euler</title>
 <h1>Trey Rhodes</h1>
-<p>Project Euler Solutions</p>
-<a href="Problem01.html">Problem 1<br></a>
-<a href="Problem02.html">Problem 2<br></a>
+<h2>E-Portfolio</h2>
+<div style="width:100%;">
+	<div style="float:left; width:50%;">
+		<h3>Project Euler Solutions</h3>
+		<p>
+		<a href="Problem01.html">Problem 1<br></a>
+		<a href="Problem02.html">Problem 2<br></a>
+		</p>
+	</div>
+	<div style="float:left; width 80%; border: 5px solid #9197ce">
+			<embed src="Resume.pdf" width="745px" height="500px" /> <br>
+		<p> <a href="Resume.pdf" style="text-decoration: none">&DownArrowBar; Resume Download<br></a> </p>
+	</div>
+</div>
 </font>
 </body>
 </html>
