--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
 <body>
 <font size="+3">
 <link rel="icon" href="hnrqa.png">
-<link href="stylesheet.css" rel="stylesheet" type="text/css" />
+<link href="explorerstyle.css" rel="stylesheet" type="text/css" />
 <title>Trey Rhodes//Home</title>
 <h1>Trey Rhodes</h1>
-<p>E-Portfolio</p>
-<p>Projects</p>
-<a href="/Resume">Resume<br></a>
-<a href="Serious Game.jar">Serious Game For First Graders<br></a>
-<a href="Game UML.docx">Serious Game UML Diagram<br></a>
-<a href="/Project Euler Solutions">Project Euler Solutions<br></a>
-<a href="Swift.pptx">Swift Presentation<br></a>
-<a href="Rancher Problem.zip">Fibonacci Calculator<br></a>
-<a href="/Algorithms and Data Structures">Algorithms and Data Structures Programs<br></a>
+<h2>E-Portfolio</h2>
+<div style="width:100%;">
+	<div style="float:left; width:50%;">
+		<h3>Projects</h3>
+		<p>
+		<a href="Serious Game.jar" style="text-decoration: none;">&DownArrowBar; Game For First Graders<br></a>
+		<a href="Swift.pptx" style="text-decoration: none">&DownArrowBar; Swift Presentation<br></a>
+		<a href="Rancher Problem.zip" style="text-decoration: none">&DownArrowBar; Fibonacci Calculator<br></a>
+		<a href="/Game UML" style="text-decoration: none">Game for First Graders UML Diagram<br></a>
+		<a href="/Project Euler Solutions" style="text-decoration: none">Project Euler Solutions<br></a>
+		<a href="/Algorithms and Data Structures" style="text-decoration: none">Algorithms and Data Structures Programs<br></a>
+		</p>
+	</div>
+	<div style="float:left; width 80%; border: 5px solid #9197ce">
+			<embed src="Resume.pdf" width="745px" height="500px" /> <br>
+		<p> <a href="Resume.pdf" style="text-decoration: none">&DownArrowBar; Resume Download<br></a> </p>
+	</div>
+</div>
 </font>
 </body>
 </html>
