--- a/Algorithms and Data Structures/index.html
+++ b/Algorithms and Data Structures/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html>
 <body>
-<font size="+3
+<font size="+3">
 <link rel="icon" href="hnrqa.png">
+<link href="explorerstyle.css" rel="stylesheet" type="text/css" />
 <title>Trey Rhodes//Algorithms and Data Structures</title>
 <h1>Trey Rhodes</h1>
-<p>Algorithms and Data Structures</p>
-<a href="Dijkstras.html">Dijkstra's Algorithm (C)<br></a>
-<a href="Prims.html">Prim's Algorithm (C)<br></a>
-<a href="DMM.html">Dynamic Memory Management (C)<br></a>
-<a href="CounterSort.html">Counter Sort (C)<br></a>
-<a href="ParallelLinearSearch.html">Parallel Linear Search (Java)<br></a>
-<a href="ParallelCounterSort.html">Parallel Counter Sort (Java)<br></a>
+<h2>E-Portfolio</h2>
+<div style="width:100%;">
+	<div style="float:left; width:50%;">
+		<h3>Algorithms and Data Structures Programs</h3>
+		<p>
+		<a href="Dijkstras.html">Dijkstra's Algorithm (C)<br></a>
+		<a href="Prims.html">Prim's Algorithm (C)<br></a>
+		<a href="DMM.html">Dynamic Memory Management (C)<br></a>
+		<a href="CounterSort.html">Counter Sort (C)<br></a>
+		<a href="ParallelLinearSearch.html">Parallel Linear Search (Java)<br></a>
+		<a href="ParallelCounterSort.html">Parallel Counter Sort (Java)<br></a>
+		</p>
+	</div>
+	<div style="float:left; width 80%; border: 5px solid #9197ce">
+			<embed src="Resume.pdf" width="745px" height="500px" /> <br>
+		<p> <a href="Resume.pdf" style="text-decoration: none">&DownArrowBar; Resume Download<br></a> </p>
+	</div>
+</div>
 </font>
 </body>
 </html>
