--- a/Algorithms and Data Structures/index.html
+++ b/Algorithms and Data Structures/index.html
@@ -3,7 +3,7 @@
 <body>
 <font size="+3">
 <link rel="icon" href="hnrqa.png">
-<link href="explorerstyle.css" rel="stylesheet" type="text/css" />
+<link href="./explorerstyle.css" rel="stylesheet" type="text/css" />
 <title>Trey Rhodes//Algorithms and Data Structures</title>
 <h1>Trey Rhodes</h1>
 <h2>E-Portfolio</h2>
@@ -20,8 +20,8 @@
 		</p>
 	</div>
 	<div style="float:left; width 80%; border: 5px solid #9197ce">
-			<embed src="Resume.pdf" width="745px" height="500px" /> <br>
-		<p> <a href="Resume.pdf" style="text-decoration: none">&DownArrowBar; Resume Download<br></a> </p>
+			<embed src="./Resume.pdf" width="745px" height="500px" /> <br>
+		<p> <a href="./Resume.pdf" style="text-decoration: none">&DownArrowBar; Resume Download<br></a> </p>
 	</div>
 </div>
 </font>
